feature: implement get userdetails in frontend
